--- a/biblio.bib
+++ b/biblio.bib
@@ -311,3 +311,20 @@
     volume = {97},
     pages = {611--631}
 }
+
+@Misc{otb,
+  title     = {Orfeo Toolbox},
+  howpublished = {\url{https://www.orfeo-toolbox.org/}},
+annote    = {Accessed: 2016-09-28}
+}
+
+@article{dalla2010morphological,
+  title={Morphological attribute profiles for the analysis of very high resolution images},
+  author={Dalla Mura, Mauro and Benediktsson, J{\'o}n Atli and Waske, Bj{\"o}rn and Bruzzone, Lorenzo},
+  journal={IEEE Transactions on Geoscience and Remote Sensing},
+  volume={48},
+  number={10},
+  pages={3747--3762},
+  year={2010},
+  publisher={IEEE}
+}
