Section Exp. results
- repris le texte et les tableaux
- rajouté une biblio
- rajouté des commentaires à Adrien

--- a/biblio.bib
+++ b/biblio.bib
@@ -328,3 +328,16 @@ annote    = {Accessed: 2016-09-28}
   year={2010},
   publisher={IEEE}
 }
+
+@Article{rs70912356,
+AUTHOR = {Inglada, Jordi and Arias, Marcela and Tardy, Benjamin and Hagolle, Olivier and Valero, Silvia and Morin, David and Dedieu, Gérard and Sepulcre, Guadalupe and Bontemps, Sophie and Defourny, Pierre and Koetz, Benjamin},
+TITLE = {Assessment of an Operational System for Crop Type Map Production Using High Temporal and Spatial Resolution Satellite Optical Imagery},
+JOURNAL = {Remote Sensing},
+VOLUME = {7},
+YEAR = {2015},
+NUMBER = {9},
+PAGES = {12356},
+URL = {http://www.mdpi.com/2072-4292/7/9/12356},
+ISSN = {2072-4292},
+DOI = {10.3390/rs70912356}
+}
